--- a/web/html/web.html
+++ b/web/html/web.html
@@ -25,10 +25,39 @@
 </ul>
 
 <!--ordered list-->
-<ol>
+<!--Start from 2-->
+<ol start=2 reversed type="I">
     <li>Item1</li>
     <li>Item2</li>
 </ol>
+
+<!--展示一个hyper link-->
+<!--user agent stylesheet: browser css-->
+<div>
+    <!--tag是<a>-->
+    <!--content是Google-->
+    <a href="https://developer.mozilla.org/en-US/docs/Learn/Getting_started_with_the_web/How_the_Web_works">
+        How the web works?
+    </a>
+</div>
+
+<!--container-->
+<div>
+    <!--The <img> tag has two required attributes:-->
+    <img src="img_girl.jpg" alt="this is an example image">
+    <span>AAA</span>
+    <span>CCC</span>
+</div>
+
+<div>
+    <div>
+
+    </div>
+    <div>
+
+    </div>
+
+</div>
 
 
 </body>
